--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,7 @@ ul {
     display: flex;
     align-items: center;
     fill: #757575;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-list-one {
     display: flex;
@@ -131,6 +132,7 @@ color: #2196F3;
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--body-dark-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -146,6 +148,7 @@ color: #2196F3;
     letter-spacing: 0.02em;
     color: #757575;
     align-items: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link-one:hover,
@@ -194,12 +197,12 @@ color: #2196F3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
 border: none;
-   }
+}
 
 
 .hero-btn:hover,
 .hero-btn:focus {
-   color:  #FFFFFF;
+color:  #FFFFFF;
 }
 .hero-btn {
     background-color: #2196F3;
@@ -286,6 +289,10 @@ border: none;
     padding-bottom: 94px;
 }
 
+.imgwork {
+    min-height: 294px;
+}
+
 .project-title {
     font-size: 36px;
     line-height: 1.17;
@@ -311,12 +318,12 @@ border: none;
 
 .foto-text {
     font-family: Roboto;
-font-style: normal;
-font-weight: 700;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.03em;
-text-transform: uppercase;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
     width: 370px;
     height: 70px;
     display: flex;
@@ -326,7 +333,6 @@ text-transform: uppercase;
     color: #ffffff;
     position: absolute;
     bottom: 0;
-   
 }
 
 
@@ -366,6 +372,7 @@ text-transform: uppercase;
     align-items: center;
     border-radius: 50px;
     color: #AFB1B8;
+    transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .worker-social-link:hover,
@@ -374,20 +381,12 @@ text-transform: uppercase;
     color: #ffffff;
 }
 
-/* .worker-social-link:hover .worker-social-icon,
-.worker-social-link:focus .worker-social-icon {
-    fill: #ffffff ;
-} */
 
 .worker-social-icon {
     fill: currentColor;
 }
-    
 
-/* .worker-social-icon:hover,
-.worker-social-icon:focus {
-fill: #ffffff;
-} */
+
 
 .worker-social-list {
     display: flex;
@@ -403,7 +402,7 @@ fill: #ffffff;
     content: "";
     fill: #AFB1B8;
 }
- 
+
 
 .about-team {
     background: #FFFFFF;
@@ -415,7 +414,7 @@ fill: #ffffff;
 
 
 .about-team:not(:last-child) {
- margin-right: 30px;
+margin-right: 30px;
 }
 
 .work-title {
@@ -464,12 +463,12 @@ line-height: 42px;
 text-align: center;
 letter-spacing: 0.03em;
 color: #212121;
+
 }
 
 .clients-list {
     display: flex;
     justify-content: center;
-    
 }
 
 .clients-item {
@@ -492,6 +491,7 @@ color: #212121;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);  
 }
 
 .clients-link:hover,
@@ -568,6 +568,7 @@ margin-bottom: 9px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: #FFFFFF;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link-city:hover,
@@ -584,6 +585,7 @@ margin-bottom: 9px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link:hover, 
@@ -623,6 +625,7 @@ text-transform: uppercase;
     border-radius: 50px;
     background: rgba(255, 255, 255, 0.1);
     fill: #FFFFFF;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-link:hover,
@@ -645,7 +648,8 @@ text-transform: uppercase;
 .btn {
     background: #F5F4FA;
     border-radius: 4px;
-    padding: 6px 22px;  
+    padding: 6px 22px; 
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .title-box {
@@ -715,10 +719,11 @@ margin: 0;
     border: 1px solid #EEEEEE;
     box-sizing: border-box;
     cursor: pointer;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
  
-.list-boxing-wrap:hover .web-text {
+.list-box:hover .web-text {
     transform: translateY(0);
     
 }
@@ -739,7 +744,7 @@ margin: 0;
     max-height: 294px;
     width: 370px;
     transform: translateY(100%);
-    transition: transform 250ms, cubic-bezier(0.4, 0, 0.2, 1) linear;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list-boxing-wrap {
@@ -756,6 +761,7 @@ letter-spacing: 0.03em;
 color: #212121;
 cursor: pointer;
 border: none;
+
 }
 
 .btn:hover,
@@ -792,8 +798,10 @@ color: #FFFFFF;
     width: 100vw;
     height: 100vh;
     background-color:rgba(0, 0, 0, 0.2);
-    
+    /* transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+    transition: opacity 500ms, visibility 500ms;
 }
+
 
 .modal {
     width: 528px;
@@ -805,6 +813,7 @@ top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
 position: absolute;
+transition: transform 500ms;
 }
 
 .modal-close {
@@ -819,6 +828,11 @@ position: absolute;
     position: absolute;
     top: 8px;
     right: 8px;
+    
+}
+
+.backdrop.is-hidden .modal {
+    transform:  translate(-50%, -50%) scale(1.2);
 }
 
 .is-hidden {
