--- a/css/styles.css
+++ b/css/styles.css
@@ -814,6 +814,7 @@ left: 50%;
 transform: translate(-50%, -50%);
 position: absolute;
 transition: transform 500ms;
+padding: 40px;
 }
 
 .modal-close {
@@ -839,4 +840,78 @@ transition: transform 500ms;
     opacity: 0;
     pointer-events: none;
     visibility: hidden;
+}
+
+.modal-title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+    margin-bottom: 12px;
+}
+
+.form-input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+    padding-left: 40px;
+}
+
+.input-text {
+    width: 25px;
+    height: 14px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: #757575;
+    display: block;
+    margin-bottom: 4px;   
+}
+
+.form-field {
+    margin-bottom: 10px;
+position: relative;
+}
+
+.form-text {
+    width: 100%;
+    height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+    resize: none;
+    padding: 12px 16px;
+    margin-bottom: 25px;
+}
+
+.form-deal {
+    font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+color: #757575;
+}
+
+.form-deal-color {
+    color: #2196F3;
+}
+
+
+.modal-button {
+    width: 200px;
+    height: 50px;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
 }
