--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-}
+
 
 body {
     font-family: "Roboto" , sans-serif;
@@ -560,7 +560,7 @@ color: #212121;
     line-height: 1.19;    
     letter-spacing: 0.03em;
     color: #FFFFFF;
-    /* margin-bottom: 60px; */
+    
 }
 
 .footer-container-list {
@@ -649,11 +649,6 @@ text-transform: uppercase;
     background-color:#2196F3;
 }
 
-
-.subcription {
-
-}
-
 .subscription-title {
     height: 16px;
     margin-bottom: 20px;
@@ -678,6 +673,9 @@ text-transform: uppercase;
     background: #2F303A;
     padding: 15px 16px;
     color: rgba(255, 255, 255, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .subscription-input::placeholder {
@@ -689,7 +687,15 @@ text-transform: uppercase;
     color: rgba(255, 255, 255, 0.6);
 }
 
+.sub-form {
+    display: flex;
+    align-items: center;
+}
+
 .subscription-submit {
+    font-size: 16px;
+    line-height: 1.87;
+    content: "";
     width: 200px;
     height: 50px;
     background: #2196F3;
@@ -697,7 +703,19 @@ text-transform: uppercase;
     border-radius: 4px;
     margin-left: 12px;
     color: #ffffff;
-    padding-right: 62px;
+    align-items: center;
+    display: inline-flex;
+    padding: 10px 28px;
+
+}
+
+
+
+.subscription-icon {
+    display: inline-flex;
+    content: "";
+    fill: #ffffff;
+    margin-left: 10px;
 }
 
 /* ------------------------------MAIN BUTTON------------------------------ */
@@ -981,7 +999,6 @@ fill: #2196F3;
     border-radius: 4px;
     resize: none;
     padding: 12px 16px;
-    margin-bottom: 20px;
     outline: none;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1003,6 +1020,7 @@ letter-spacing: 0.01em;
 
 
 .modal-button {
+    content: "";
     width: 200px;
     height: 50px;
     background: #2196F3;
@@ -1060,6 +1078,7 @@ align-items: center;
         justify-content: center;
         align-items: center;
         margin-bottom: 30px;
+        margin-top: 20px;
     }
 
     .policy-link {
