--- a/css/styles.css
+++ b/css/styles.css
@@ -536,6 +536,7 @@ color: #212121;
     background-color: #2F303A;
     padding-top: 60px;
     padding-bottom: 60px;
+    display: flex;align-items: center;
 }
 
 .footer-list {
@@ -544,6 +545,7 @@ color: #212121;
 }
 
 .logo-logo {
+    width: 231px;
     margin-bottom: 20px;
 }
 
@@ -606,18 +608,18 @@ margin-bottom: 9px;
 
 .footer-link:hover, 
 .footer-link:focus {
-   color:  var(--hover-focus-color);
+    color:  var(--hover-focus-color);
 }
 
 
 .footer-title {
-    font-family: Roboto;
-font-style: normal;
-font-weight: 700;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.03em;
-text-transform: uppercase;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
     color: #ffffff;
     margin-bottom: 20px;
 }
@@ -706,7 +708,7 @@ text-transform: uppercase;
     align-items: center;
     display: inline-flex;
     padding: 10px 28px;
-
+    border: none;
 }
 
 
@@ -913,7 +915,8 @@ padding: 40px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close:focus {
+.modal-close:focus,
+.modal-close:hover {
 fill: #2196F3;
 }
 
